<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffeecc"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/aceleracion"
        android:textSize="20sp"
        android:textStyle="normal|bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="11sp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="start"
        android:text="@string/a_x"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView_Ax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="start"
        android:text="@string/acelarecion_x"
        android:textSize="15sp"
        android:textStyle="normal" />

    <View
        android:layout_width="match_parent"
        android:layout_height="5sp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="start"
        android:text="@string/a_y"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView_Ay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="start"
        android:text="@string/acelarecion_y"
        android:textSize="15sp"
        android:textStyle="normal" />

    <View
        android:layout_width="match_parent"
        android:layout_height="5sp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="start"
        android:text="@string/a_z"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView_Az"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="start"
        android:text="@string/aceleracion_z"
        android:textSize="15sp"
        android:textStyle="normal" />

    <View
        android:layout_width="match_parent"
        android:layout_height="5sp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="start"
        android:text="@string/a_modulo"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView_Amodulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="start"
        android:text="@string/a_m_dulo"
        android:textSize="15sp"
        android:textStyle="normal" />

    <View
        android:layout_width="match_parent"
        android:layout_height="5sp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="start"
        android:text="@string/a_maxima"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView_Amaxima"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="start"
        android:text="@string/a_m_xima"
        android:textSize="15sp"
        android:textStyle="normal" />

    <View
        android:layout_width="match_parent"
        android:layout_height="5sp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="start"
        android:text="@string/gravedad"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView_gravedad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="start"
        android:text="@string/gravedad"
        android:textSize="15sp"
        android:textStyle="normal" />
</LinearLayout>